<resources>
    <string name="app_name">维度电影</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie">电影</string>
    <string name="cinema">影院</string>
    <string name="mine">我的</string>
    <string name="gotoLogin">去登录</string>
    <string name="cinema_ticket">电影票</string>
    <string name="my_interest">我的关注</string>
    <string name="My_reservation">我的预约</string>
    <string name="buy_ticket">购票记录</string>
    <string name="read_movie">看过的电影</string>
    <string name="my_comment">我的评论</string>
    <string name="feedback">意见反馈</string>
    <string name="setting">设置</string>
    <string name="email">请输入邮箱账号</string>
    <string name="pwd">请输入密码</string>
    <string name="forget">忘记密码</string>
    <string name="login">登陆</string>
    <string name="not_have">暂无账号,立刻注册</string>
    <string name="or">------或------</string>
    <string name="nikeName">请输入昵称</string>
    <string name="sendCode">请输入验证码</string>
    <string name="getCode">获取验证码</string>
    <string name="register">注册</string>
    <string name="move">更多</string>
    <string name="conn">即将上映</string>
    <string name="hot">热门电影</string>
    <string name="release">正在热映</string>
    <string name="buy">购买</string>
    <string name="write">写影评</string>
    <string name="seat">选座购票</string>
    <string name="name">名字</string>
    <string name="type">类型</string>
    <string name="duration">分钟</string>
    <string name="releaseTime">日期</string>
    <string name="placeOrigin">地方</string>
    <string name="Introduce">介绍</string>
    <string name="Foreshow">预告</string>
    <string name="Still">剧照</string>
    <string name="Comment">评论</string>
    <string name="Director">演职演员</string>
    <string name="movieIntroduce">剧情简介</string>
    <string name="movieDirector">导演</string>
    <string name="intro_movieActor">演员</string>
    <string name="intro_graded">分数</string>
    <string name="address">地址</string>
    <string name="cinemas">CGV影城</string>
    <string name="time">时间</string>
    <string name="how">多少人</string>
    <string name="date">日期</string>
    <string name="title">标题</string>
    <string name="cinema_details">影院详情</string>
    <string name="cinema_name_details">名称</string>
    <string name="cinema_type_details">类别</string>
    <string name="cinema_here_details">到这里去</string>
    <string name="cinema_phone_details">电话</string>
    <string name="cinema_riding_details">乘车路线</string>
    <string name="cinema_route_details">路线</string>
    <string name="Schedule">排期</string>
    <string name="Movie_details">电影详情</string>
    <string name="movie_hall">影厅</string>
    <string name="start_time">开始时间</string>
    <string name="division_time">-----</string>
    <string name="finish_time">结束时间</string>
    <string name="immediately">立即下单</string>
    <string name="please">请先选座</string>
    <string name="weChatPay">微信支付</string>
    <string name="Pay">支付宝支付</string>
    <string name="please_select">请选择支付方式</string>


</resources>
