<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dp_15"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBlue"
    >
    <com.facebook.drawee.view.SimpleDraweeView
        app:roundedCornerRadius="@dimen/dp_20"
        android:id="@+id/sdv_imageUrl"
    android:layout_width="@dimen/dp_88"
    android:layout_height="@dimen/dp_108" />

    <LinearLayout
        android:layout_width="@dimen/dp_312"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_height="@dimen/dp_98">

        <LinearLayout
            android:layout_marginLeft="@dimen/dp_118"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_coming_name"
                android:text="@string/name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dp_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/colorWhite"
                android:text="@string/time"
                android:id="@+id/tv_coming_releaseTime"
                android:textSize="@dimen/sp_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/how"
                android:id="@+id/tv_coming_wantSeeNum"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>