<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:drawer="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    tools:context=".activity.MovieDetailsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/sdv_imageUrl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_600" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="@dimen/dp_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/colorWhite"
                android:text="@string/name"
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/colorWhite"
                    android:text="@string/type"
                    android:id="@+id/tv_movieType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="@color/colorWhite"
                    android:text="@string/duration"
                    android:id="@+id/tv_duration"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/colorWhite"
                    android:text="@string/releaseTime"
                    android:id="@+id/tv_releaseTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginLeft="@dimen/dp_10"
                    android:textColor="@color/colorWhite"
                    android:text="@string/placeOrigin"
                    android:id="@+id/tv_placeOrigin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <Button
               android:layout_width="0dp"
               android:background="@color/colorYellow"
               android:layout_height="wrap_content"
               android:layout_centerHorizontal="true"
               android:textColor="@color/colorWhite"

               android:layout_weight="1"
               android:text="@string/write" />
           <Button
               android:layout_weight="2"
               android:layout_width="0dp"
               android:background="@color/colorPink"
               android:layout_height="wrap_content"
               android:layout_centerHorizontal="true"
               android:textColor="@color/colorWhite"
               android:text="@string/seat" />
       </LinearLayout>
    </LinearLayout>

    <com.bw.movie.view.DrawerLayout
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLucency"
        drawer:DrawerLayoutContent_ID="@+id/drawerContent"
        drawer:DrawerLayoutHandler_ID="@+id/drawerHandle"
        drawer:DrawerLayout_ID="@+id/drawerTow">

        <RelativeLayout
            android:id="@+id/drawerTow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <TextView
                android:layout_width="match_parent"
                android:id="@+id/drawerHandle"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorWhite"
                android:gravity="center_horizontal|center_vertical"
                android:text="V" />

            <LinearLayout
                android:id="@+id/drawerContent"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dp_600"
                android:layout_below="@+id/drawerHandle"
                android:background="@color/colorBlue"
                android:gravity="center"
                android:orientation="vertical">
                <com.google.android.material.tabs.TabLayout
                    app:tabTextColor="@color/colorWhite"
                    app:tabSelectedTextColor="@color/colorWhite"
                    android:id="@+id/tab_details"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"></com.google.android.material.tabs.TabLayout>
                <androidx.viewpager.widget.ViewPager
                    android:layout_width="match_parent"
                    android:layout_weight="8"
                    android:id="@+id/vp_details"
                    android:layout_height="0dp">
                </androidx.viewpager.widget.ViewPager>
            </LinearLayout>
        </RelativeLayout>
    </com.bw.movie.view.DrawerLayout>


</RelativeLayout>