<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBlue"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".fragment.details_fragment.IntroduceFragment">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginLeft="@dimen/dp_10"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/movieIntroduce"
                android:layout_width="wrap_content"
                android:textColor="@color/colorWhite"
                android:id="@+id/tv_summary_intro"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/colorWhite"
                android:id="@+id/tv_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/Director"
            android:layout_marginLeft="@dimen/dp_10"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginLeft="@dimen/dp_10"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/movieDirector"
                android:id="@+id/tv_intro_movieDirector"
                android:layout_marginTop="@dimen/dp_10"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movieDirector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
        <LinearLayout

            android:layout_marginLeft="@dimen/dp_10"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/intro_movieActor"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="@dimen/dp_10"
                android:id="@+id/tv_intro_movieActor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movieActor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>

</LinearLayout>