<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDark"
    tools:context=".activity.CinemaDetailsActivity">

<com.bw.movie.view.TitleView
    app:text="@string/cinema_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"></com.bw.movie.view.TitleView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_cm_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:text="@string/cinema_name_details"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_20" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:text="@string/cinema_type_details"
                    android:textColor="@color/colorDesert"
                    android:textSize="@dimen/sp_15" />
                <RelativeLayout
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/dp_16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/group_hdpi"
                            android:layout_width="@dimen/dp_13"
                            android:layout_height="@dimen/dp_16" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cinema_here_details"
                            android:textColor="@color/colorWhite"
                            />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_cm"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:tabTextColor="@color/colorWhite"></com.google.android.material.tabs.TabLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_det"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"></androidx.viewpager.widget.ViewPager>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPink"
        android:text="查看该电影排期"
        android:textColor="@color/colorWhite"
        android:id="@+id/but_schedule"
        android:textSize="@dimen/sp_20"
        />
</LinearLayout>