<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_24"
    android:background="@color/colorBlue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.facebook.drawee.view.SimpleDraweeView
                android:layout_width="@dimen/dp_44"
                android:id="@+id/sdv_head"
                android:layout_height="@dimen/dp_44"
                app:roundAsCircle="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_comm_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/tv_graded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intro_graded"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_12">

                <TextView
                    android:textColor="@color/colorWhite"
                    android:layout_width="wrap_content"
                    android:id="@+id/tv_date"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_15"
                    android:text="@string/releaseTime" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14">

        <TextView
            android:layout_width="@dimen/dp_312"
            android:id="@+id/tv_commentContent"
            android:textSize="@dimen/sp_12"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/box_praise"
                android:layout_width="@dimen/dp_18"
                android:layout_height="@dimen/dp_18"
                android:background="@drawable/praise_check"
                android:button="@null" />

            <TextView
                android:id="@+id/tv_praiseNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="0"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_replyHeadPic"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_30"></androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/tv_many"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/how"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>